# robot-fm-tests

./: .gitignore  README.md  log.html  output.xml  pyproject.toml  report.html
api_tests/: testNutritionById.robot  testPriceBreakdown.robot  testRandomRecipe.robot  testTasteById.robot
api_tests/resources/: resource.robot  variables.robot
e2e_tests/: testAssignedTasks.robot  testLogin.robot
e2e_tests/resources/: locators.robot  resource.robot  variables.robot
