[tool.poetry]
name = "robot-fm-tests"
version = "0.1.0"
description = ""
authors = ["Krystian Pochodyla"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^6.0.2"
robotframework-seleniumlibrary = "^6.0.0"
robotframework-requests = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
